@@ -1,32 +1,30 @@
 package name.abuchen.portfolio.online.impl;
 
-import static name.abuchen.portfolio.online.impl.YahooHelper.asNumber;
 import static name.abuchen.portfolio.online.impl.YahooHelper.asPrice;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.text.MessageFormat;
 import java.text.ParseException;
+import java.time.DateTimeException;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 import org.json.simple.JSONValue;
+
+import com.google.common.annotations.VisibleForTesting;
 
 import name.abuchen.portfolio.Messages;
 import name.abuchen.portfolio.PortfolioLog;
@@ -34,7 +32,6 @@ import name.abuchen.portfolio.model.Exchange;
 import name.abuchen.portfolio.model.LatestSecurityPrice;
 import name.abuchen.portfolio.model.Security;
 import name.abuchen.portfolio.model.SecurityPrice;
-import name.abuchen.portfolio.model.SecurityProperty;
 import name.abuchen.portfolio.money.Values;
 import name.abuchen.portfolio.online.QuoteFeed;
 import name.abuchen.portfolio.online.QuoteFeedData;
@@ -57,12 +54,12 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         return Messages.LabelYahooFinance;
     }
 
+    @SuppressWarnings("nls")
     public String rpcLatestQuote(Security security) throws IOException
     {
-        return new WebAccess("query1.finance.yahoo.com", "/v7/finance/quote") //$NON-NLS-1$ //$NON-NLS-2$
-                        .addParameter("lang", "en-US").addParameter("region", "US") //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
-                        .addParameter("corsDomain", "finance.yahoo.com") //$NON-NLS-1$ //$NON-NLS-2$
-                        .addParameter("symbols", security.getTickerSymbol()).get(); //$NON-NLS-1$
+        return new WebAccess("query1.finance.yahoo.com", "/v8/finance/chart/" + security.getTickerSymbol())
+                        .addParameter("lang", "en-US").addParameter("region", "US")
+                        .addParameter("corsDomain", "finance.yahoo.com").get();
     }
 
     @Override
@@ -70,44 +67,33 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
     {
         try
         {
-            String html = this.rpcLatestQuote(security);
-
-            int startIndex = html.indexOf("quoteResponse"); //$NON-NLS-1$
-            if (startIndex < 0)
-                return Optional.empty();
+            String json = this.rpcLatestQuote(security);
 
             LatestSecurityPrice price = new LatestSecurityPrice();
 
-            Optional<String> time = extract(html, startIndex, "\"regularMarketTime\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
+            Optional<String> time = extract(json, 0, "\"regularMarketTime\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
             if (time.isPresent())
             {
                 long epoch = Long.parseLong(time.get());
                 price.setDate(Instant.ofEpochSecond(epoch).atZone(ZoneId.systemDefault()).toLocalDate());
             }
 
-            Optional<String> value = extract(html, startIndex, "\"regularMarketPrice\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
+            Optional<String> value = extract(json, 0, "\"regularMarketPrice\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
             if (value.isPresent())
-                price.setValue(asPrice(value.get()));
+            {
+                Optional<String> quoteCurrency = extract(json, 0, "\"currency\":\"", "\","); //$NON-NLS-1$ //$NON-NLS-2$
+                price.setValue(convertBritishPounds(asPrice(value.get()), quoteCurrency.orElse(null),
+                                security.getCurrencyCode()));
+            }
 
-            Optional<String> previousClose = extract(html, startIndex, "\"regularMarketPreviousClose\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
-            if (previousClose.isPresent())
-                price.setPreviousClose(asPrice(previousClose.get()));
-
-            Optional<String> high = extract(html, startIndex, "\"regularMarketDayHigh\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
-            if (high.isPresent())
-                price.setHigh(asPrice(high.get()));
-
-            Optional<String> low = extract(html, startIndex, "\"regularMarketDayLow\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
-            if (low.isPresent())
-                price.setLow(asPrice(low.get()));
-
-            Optional<String> volume = extract(html, startIndex, "\"regularMarketVolume\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
-            if (volume.isPresent())
-                price.setVolume(asNumber(volume.get()));
+            price.setHigh(LatestSecurityPrice.NOT_AVAILABLE);
+            price.setLow(LatestSecurityPrice.NOT_AVAILABLE);
+            price.setVolume(LatestSecurityPrice.NOT_AVAILABLE);
 
             if (price.getDate() == null || price.getValue() <= 0)
             {
-                PortfolioLog.error(html);
+                PortfolioLog.error(MessageFormat.format(Messages.MsgErrorDownloadYahoo, 1, security.getTickerSymbol(),
+                                json));
                 return Optional.empty();
             }
             else
@@ -117,7 +103,7 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         }
         catch (IOException | ParseException e)
         {
-            PortfolioLog.error(e);
+            PortfolioLog.abbreviated(e);
             return Optional.empty();
         }
     }
@@ -176,7 +162,7 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         try
         {
             String responseBody = requestData(security, startDate);
-            return extractQuotes(responseBody);
+            return extractQuotes(responseBody, security.getCurrencyCode());
         }
         catch (IOException e)
         {
@@ -206,13 +192,18 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         else if (days < 1500)
             range = "5y"; //$NON-NLS-1$
 
-        return new WebAccess("query1.finance.yahoo.com", "/v7/finance/spark") //
-                        .addParameter("symbols", security.getTickerSymbol()).addParameter("range", range)
+        return new WebAccess("query1.finance.yahoo.com", "/v8/finance/chart/" + security.getTickerSymbol()) //
+                        .addParameter("range", range) //
                         .addParameter("interval", "1d").get();
 
     }
 
     /* package */ QuoteFeedData extractQuotes(String responseBody)
+    {
+        return extractQuotes(responseBody, ""); //$NON-NLS-1$
+    }
+
+    private QuoteFeedData extractQuotes(String responseBody, String securityCurrency)
     {
         List<LatestSecurityPrice> answer = new ArrayList<>();
 
@@ -222,9 +213,9 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
             if (responseData == null)
                 throw new IOException("responseBody"); //$NON-NLS-1$
 
-            JSONObject resultSet = (JSONObject) responseData.get("spark"); //$NON-NLS-1$
+            JSONObject resultSet = (JSONObject) responseData.get("chart"); //$NON-NLS-1$
             if (resultSet == null)
-                throw new IOException("spark"); //$NON-NLS-1$
+                throw new IOException("chart"); //$NON-NLS-1$
 
             JSONArray result = (JSONArray) resultSet.get("result"); //$NON-NLS-1$
             if (result == null || result.isEmpty())
@@ -234,17 +225,31 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
             if (result0 == null)
                 throw new IOException("result[0]"); //$NON-NLS-1$
 
-            JSONArray response = (JSONArray) result0.get("response"); //$NON-NLS-1$
-            if (response == null || response.isEmpty())
-                throw new IOException("response"); //$NON-NLS-1$
+            String quoteCurrency = null;
+            ZoneId exchangeZoneId = ZoneOffset.UTC;
+            if (result0.containsKey("meta")) //$NON-NLS-1$
+            {
+                JSONObject meta = (JSONObject) result0.get("meta"); //$NON-NLS-1$
 
-            JSONObject response0 = (JSONObject) response.get(0);
-            if (response0 == null)
-                throw new IOException("response[0]"); //$NON-NLS-1$
+                String exchangeTimezoneName = (String) meta.get("exchangeTimezoneName"); //$NON-NLS-1$
+                if (exchangeTimezoneName != null)
+                {
+                    try // NOSONAR
+                    {
+                        exchangeZoneId = ZoneId.of(exchangeTimezoneName);
+                    }
+                    catch (DateTimeException e)
+                    {
+                        // Ignore
+                    }
+                }
 
-            JSONArray timestamp = (JSONArray) response0.get("timestamp"); //$NON-NLS-1$
+                quoteCurrency = (String) meta.get("currency"); //$NON-NLS-1$
+            }
 
-            JSONObject indicators = (JSONObject) response0.get("indicators"); //$NON-NLS-1$
+            JSONArray timestamp = (JSONArray) result0.get("timestamp"); //$NON-NLS-1$
+
+            JSONObject indicators = (JSONObject) result0.get("indicators"); //$NON-NLS-1$
             if (indicators == null)
                 throw new IOException("indicators"); //$NON-NLS-1$
 
@@ -260,8 +265,17 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
                 if (ts != null && q != null && q.doubleValue() > 0)
                 {
                     LatestSecurityPrice price = new LatestSecurityPrice();
-                    price.setDate(LocalDateTime.ofEpochSecond(ts, 0, ZoneOffset.UTC).toLocalDate());
-                    price.setValue(Values.Quote.factorize(q));
+                    price.setDate(LocalDateTime.ofInstant(Instant.ofEpochSecond(ts), exchangeZoneId).toLocalDate());
+
+                    // yahoo api seesm to return floating numbers --> limit to 4
+                    // digits which seems to round it to the right value
+                    double v = Math.round(q * 10000) / 10000d;
+                    price.setValue(convertBritishPounds(Values.Quote.factorize(v), quoteCurrency, securityCurrency));
+
+                    price.setHigh(LatestSecurityPrice.NOT_AVAILABLE);
+                    price.setLow(LatestSecurityPrice.NOT_AVAILABLE);
+                    price.setVolume(LatestSecurityPrice.NOT_AVAILABLE);
+
                     answer.add(price);
                 }
             }
@@ -273,6 +287,7 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
 
         QuoteFeedData data = new QuoteFeedData();
         data.getLatestPrices().addAll(answer);
+        data.addResponse("n/a", responseBody); //$NON-NLS-1$
         return data;
     }
 
@@ -293,87 +308,44 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         return close;
     }
 
+    /**
+     * Convert GBP to GBX and vice versa if the quote and security currency
+     * match.
+     */
+    private long convertBritishPounds(long price, String quoteCurrency, String securityCurrency)
+    {
+        if (quoteCurrency != null)
+        {
+            if ("GBP".equals(quoteCurrency) && "GBX".equals(securityCurrency)) //$NON-NLS-1$ //$NON-NLS-2$
+                return price * 100;
+            if ("GBX".equals(quoteCurrency) && "GBP".equals(securityCurrency)) //$NON-NLS-1$ //$NON-NLS-2$
+                return price / 100;
+        }
+        return price;
+    }
+
     @Override
     public final List<Exchange> getExchanges(Security subject, List<Exception> errors)
     {
         List<Exchange> answer = new ArrayList<>();
 
-        // This is not the best place to include the market information from
-        // portfolio-report.net, but for now the list of exchanges is only
-        // available for Yahoo search provider.
+        // At the moment, we do not have a reasonable way to search for
+        // exchanges of a given symbol. For the time being, we add all
+        // exchanges...
 
-        List<SecurityProperty> markets = subject.getProperties()
-                        .filter(p -> p.getType() == SecurityProperty.Type.MARKET).collect(Collectors.toList());
-
-        markets.stream().map(p -> {
-            Exchange exchange = new Exchange(p.getValue(), ExchangeLabels.getString("portfolio-report." + p.getName())); //$NON-NLS-1$
-            if ("XFRA".equals(p.getName())) //$NON-NLS-1$
-                exchange.setId(exchange.getId() + ".F"); //$NON-NLS-1$
-            return exchange;
-        }).forEach(answer::add);
-
-        Set<String> candidates = new HashSet<>();
-        answer.forEach(e -> candidates.add(e.getId()));
-
-        // add existing ticker symbol as well
         String symbol = subject.getTickerSymbol();
         if (symbol != null && !symbol.isEmpty())
-            candidates.add(symbol);
-
-        for (String candidate : candidates)
         {
-            searchExchanges(candidate, answer, errors);
+            // strip away exchange suffix
+            int p = symbol.indexOf('.');
+            String plainSymbol = p >= 0 ? symbol.substring(0, p) : symbol;
+
+            answer.add(createExchange(plainSymbol));
+
+            ExchangeLabels.getAllExchangeKeys("yahoo.").forEach(e -> answer.add(createExchange(plainSymbol + "." + e))); //$NON-NLS-1$ //$NON-NLS-2$
         }
-
-        if (symbol != null && !symbol.isEmpty())
-        {
-            // Issue #251
-            // sometimes Yahoo does not return the default exchange which
-            // prevents selecting this security (example: searching for GOOG
-            // does return only unimportant exchanges)
-            Optional<Exchange> defaultExchange = answer.stream() //
-                            .filter(e -> e.getId().equals(subject.getTickerSymbol())).findAny();
-            if (!defaultExchange.isPresent())
-                answer.add(new Exchange(subject.getTickerSymbol(), subject.getTickerSymbol()));
-
-            if (answer.isEmpty())
-            {
-                // Issue #29
-                // at least add the given ticker symbol if the search returns
-                // nothing (sometimes accidentally)
-                answer.add(createExchange(subject.getTickerSymbol()));
-            }
-        }
-
-        Collections.sort(answer, (r, l) -> r.getId().compareTo(l.getId()));
 
         return answer;
-    }
-
-    private void searchExchanges(String candidate, List<Exchange> answer, List<Exception> errors)
-    {
-        // strip away exchange suffix to search for all available exchanges
-        int p = candidate.indexOf('.');
-        String prefix = p >= 0 ? candidate.substring(0, p + 1) : candidate + "."; //$NON-NLS-1$
-
-        // ensure we do not add duplicates
-        Set<String> duplicates = new HashSet<>();
-        answer.forEach(e -> duplicates.add(e.getId()));
-
-        try
-        {
-            searchSymbols(prefix) //
-                            .filter(r -> !duplicates.contains(r.getSymbol())) //
-                            .map(r -> createExchange(r.getSymbol())).forEach(e -> {
-                                duplicates.add(e.getId());
-                                answer.add(e);
-                            });
-        }
-        catch (IOException e)
-        {
-            errors.add(e);
-        }
-
     }
 
     private Exchange createExchange(String symbol)
@@ -390,22 +362,16 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         {
             return new BufferedReader(new InputStreamReader(openStream(url)));
         }
-        catch (IOException e)
+        catch (IOException | URISyntaxException e)
         {
             errors.add(e);
         }
         return null;
     }
 
-    /* enable testing */
-    protected InputStream openStream(String wknUrl) throws IOException
+    @VisibleForTesting
+    protected InputStream openStream(String wknUrl) throws IOException, URISyntaxException
     {
-        return new URL(wknUrl).openStream();
-    }
-
-    /* enable testing */
-    protected Stream<YahooSymbolSearch.Result> searchSymbols(String query) throws IOException
-    {
-        return new YahooSymbolSearch().search(query);
+        return new URI(wknUrl).toURL().openStream();
     }
 }
